# hft-market-connectivity

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  main.cpp
src/book/: CMakeLists.txt  book_manager.cpp  book_manager.h  order_book.cpp  order_book.h
src/feed/: itch_handler.cpp  itch_handler.h  itch_handler.hpp  itch_message_types.h  itch_parser.h  itch_parser.hpp
src/infra/: clock.h  latency_recorder.h
src/order_entry/: CMakeLists.txt  isender.h  ouch_encoder.h  ouch_entry_session.cpp  ouch_entry_session.h  ouch_message_types.h
src/strategy/: CMakeLists.txt  passive_quoter.cpp  passive_quoter.h
tests/: CMakeLists.txt  placeholder.cpp  test_order_book.cpp  test_ouch_encoder.cpp  test_passive_quoter.cpp
